archived/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-ssh-virtual-service
  namespace: gitlab
spec:
  hosts:
  - pipr-uat-gitlab.dol.go.th
  gateways:
  - gitlab-gateway
  tcp:
  - match:
    - port: 22
    route:
    - destination:
        host: gitlab-gitlab-shell.gitlab.svc.cluster.local
        port:
          number: 22
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-http-virtual-service
  namespace: gitlab
spec:
  hosts:
  - pipr-uat-gitlab.dol.go.th
  gateways:
  - gitlab-gateway
  http:
  - match:
    - uri:
        prefix: /admin/sidekiq
    route:
    - destination:
        host: gitlab-unicorn.gitlab.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: gitlab-unicorn.gitlab.svc.cluster.local
        port:
          number: 8181
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-minio-virtual-service
  namespace: gitlab
spec:
  hosts:
  - pipr-uat-minio.dol.go.th
  gateways:
  - gitlab-gateway
  http:
  - route:
    - destination:
        host: gitlab-minio-svc.gitlab.svc.cluster.local
        port:
          number: 9000

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apim-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "pipr-uat-mgt.dol.go.th"
        - "pipr-uat-gateway.dol.go.th"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apim-virtualservice
spec:
  hosts:
    - "pipr-uat-mgt.dol.go.th"
    - "pipr-uat-gateway.dol.go.th"
  gateways:
    - apim-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - pipr-uat-mgt.dol.go.th
      route:
        - destination:
            host: wso2apim
            port:
              number: 9443
    - match:
        - port: 443
          sniHosts:
            - pipr-uat-gateway.dol.go.th
      route:
        - destination:
            host: router
            port:
              number: 9095
